--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         </div>
         <div id="content">
             <h2>Neil really sucks balls</h2>
-            <p>Neil Rahul Sarwal is an esteemed ball sucker, but he likes some penis too.</p>
+            <p>Neil is an esteemed ball sucker, but he likes some penis too.</p>
             <h2>Why does Neil suck balls</h2>
             <p>We don't know why Neil likes to suck balls, but we seek to find out more</p>
         </div>
