testing for new deploy

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blog</title>
-        <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+        <meta charset="utf-8">
+        <title>My Compass Project</title>
+        <link rel="stylesheet" href="stylesheets/screen.css">
     </head>
+    
     <body>
-        <div id="header">
-            <span>Neil Sucks Balls</span>
-            <ul id="menu">
-                <li>WHO</li>
-                <li>WHAT</li>
-                <li>WHEN</li>
-                <li>WHERE</li>
-                <li>WHY</li>
-            </ul>
-        </div>
-        <div id="content">
-            <h2>Neil really sucks balls</h2>
-            <p>Neil is an esteemed ball sucker, but he likes some penis too.</p>
-            <h2>Why does Neil suck balls</h2>
-            <p>We don't know why Neil likes to suck balls, but we seek to find out more</p>
-        </div>
+        <header>
+            <h1>My Compass Project</h1>
+            <nav>
+                <a href="#">Bacon</a>
+                <a href="#">Beer</a>
+                <a href="#">Barbecue</a>
+            </nav>
+        </header>
     </body>
 </html>
